force-app/main/default/objects/Case/fields/Data_achizitie__c.field-meta.xml
<CustomField>
    <fullName>Data_achizitie__c</fullName>
    <label>Data achizitie</label>
    <type>Date</type>
</CustomField>