force-app/main/default/objects/Case/fields/Data_si_ora_primire__c.field-meta.xml
<CustomField>
    <fullName>Data_si_ora_primire__c</fullName>
    <label>Data si ora primire</label>
    <type>DateTime</type>
</CustomField>