force-app/main/default/objects/Case/fields/Data_si_ora_rezolutie__c.field-meta.xml
<CustomField>
    <fullName>Data_si_ora_rezolutie__c</fullName>
    <label>Data si ora rezolutie</label>
    <type>DateTime</type>
</CustomField>